# Luxite

./: .gitignore  CMakeLists.txt  build.sh  clear.sh  run.sh
demo/a/: manifest.json
src/: CMakeLists.txt  Camera.hxx  Intersection.hxx  Scene.hxx  Voxel.hxx  angle.hxx  load_camera.cxx  load_camera.hxx  load_resolution.cxx  load_resolution.hxx  load_scene.cxx  load_scene.hxx  main.cxx  ray_cast.hxx
